# erdos-unit-distance

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  test_bindings.py
.github/workflows/: ci.yml  python-publish.yml
benches/: production.rs
docs/: certificate-schema.md  correctness-contract.md  paper-map.md
examples/: certified_json.rs  exports.rs  invalid_config.rs  quickstart.rs  visualize.rs
python/: Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
scripts/: bench.sh  check-all.sh  check-bench-compile.sh  check-clippy-strict.sh  check-doctests.sh  check-examples.sh  check-python-smoke.sh
src/: backend.rs  certificate.rs  classical.rs  error.rs  lib.rs  numeric.rs  utils.rs
src/algebraic/: field.rs  lattice.rs  section2.rs  units.rs  window.rs
tests/: algebraic_tests.rs  certificate_tests.rs  docs_tests.rs  math_proofs.rs  section2_tests.rs
tests/fixtures/: section2_multiquadratic_small.json
