[package]
name = "erdos-unit-distance"
version = "0.2.0"
edition = "2024"
authors = ["Lars Brusletto"]
license = "MIT OR Apache-2.0"
description = "Certified unit-distance point sets and graphs for discrete geometry in Rust."
documentation = "https://docs.rs/erdos-unit-distance"
homepage = "https://github.com/geometric-systems/erdos-unit-distance"
repository = "https://github.com/geometric-systems/erdos-unit-distance"
readme = "README.md"
keywords = ["erdos", "unit-distance", "discrete-geometry", "graph-theory", "number-theory"]
categories = ["science", "mathematics", "algorithms"]

[workspace]
members = [
    ".",
    "python"
]

[features]
default = ["serde"]
serde = []

[dependencies]
num-bigint = "0.4"
num-complex = "0.4"
num-integer = "0.1"
num-rational = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "production"
harness = false
